src/main/default/objects/Workflow_Management_Case_Extract_Setting__c/Workflow_Management_Case_Extract_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings managing the integration with the Workflow Management platform</description>
    <label>Workflow Management Case Extract Setting</label>
</CustomObject>