src/main/default/objects/Workflow_Management_Case_Extract_Setting__c/fields/base_url__c.field-meta.xml
<CustomField>
    <fullName>base_url__c</fullName>
    <label>Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>