src/main/default/objects/Workflow_Management_Case_Extract_Setting__c/fields/batch_scope__c.field-meta.xml
<CustomField>
    <fullName>batch_scope__c</fullName>
    <label>Batch Scope</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>