src/main/default/objects/Workflow_Management_Case_Extract_Setting__c/fields/content_type__c.field-meta.xml
<CustomField>
    <fullName>content_type__c</fullName>
    <label>Content Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>