src/main/default/objects/Workflow_Management_Case_Extract_Setting__c/fields/max_retry_count__c.field-meta.xml
<CustomField>
    <fullName>max_retry_count__c</fullName>
    <label>Max Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>