src/main/default/objects/Workflow_Management_Case_Extract_Setting__c/fields/request_type__c.field-meta.xml
<CustomField>
    <fullName>request_type__c</fullName>
    <label>Request Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>