src/main/default/objects/Workflow_Management_Case_Extract_Setting__c/fields/timeout__c.field-meta.xml
<CustomField>
    <fullName>timeout__c</fullName>
    <label>Timeout</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>